--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /violin_test.ipynb
-
+/testing_app.ipynb
+/NHL_app.ipynb
+/NHL data.ipynb
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
