--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dash==2.6.2
 dash_bootstrap_components==1.0.0
 dash_table==5.0.0
-jupyter_dash==0.4.0
+# jupyter_dash==0.4.0
 numpy==1.21.5
 pandas==1.4.3
 plotly==5.3.1
