--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 dash==2.6.2
-werkzeug==2.0.3
 dash_bootstrap_components==1.0.0
 dash_table==5.0.0
-jupyter_dash==0.4.0
+jupyter_dash==0.4.2
 numpy==1.21.5
 pandas==1.4.3
 plotly==5.3.1
-gunicorn==20.10
+requests==2.28.1
+gunicorn==20.1.0
